@@ -24,6 +24,10 @@ New in spot 2.11.3.dev  (not yet released)
     multiple initial states (because Spot supports only one), the HOA
     parser could break state-based acceptance.  (Issue #522.)
 
+  - autfilt --highlight-word refused to work on automata with Fin
+    acceptance for historical reason, but the cose is perfectly able
+    to handle this now.  (Issue #523.)
+
   - delay_branching_here(), a new optimization of Spot 2.11 had an
     incorrectly handling of states without successors, causing some
     segfaults.  (Issue #524.)
